# VeloxDB

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  veloxdb.toml
.github/workflows/: docker-publish.yml  release.yml
benchmarks/: veloxdb_bench.cpp
docker/: Dockerfile  docker-compose.ghcr.yml  docker-compose.yml
docs/: README.md  architecture.md  benchmarking.md  cli.md  commands.md  contributing.md  fuzzing.md  packaging.md  persistence.md  protocol.md  release-notes-template.md  release.md  roadmap.md
examples/: redis-cli-session.txt
fuzz/: resp_parser_fuzzer.cpp
include/veloxdb/commands/: command_registry.h
include/veloxdb/config/: config.h
include/veloxdb/metrics/: metrics.h
include/veloxdb/net/: tcp_server.h
include/veloxdb/persistence/: aof.h  snapshot.h
include/veloxdb/protocol/: resp.h
include/veloxdb/server/: server.h
include/veloxdb/storage/: storage_engine.h
include/veloxdb/util/: logger.h  status.h  string.h
scripts/: run-benchmarks.sh  run-dev.sh  run-fuzz.sh  run-tests.sh
src/: main.cpp
src/commands/: command_registry.cpp  commands.cpp
src/config/: config.cpp
src/metrics/: metrics.cpp
src/net/: tcp_server.cpp
src/persistence/: aof.cpp  snapshot.cpp
src/protocol/: resp.cpp
src/server/: server.cpp
src/storage/: storage_engine.cpp
src/util/: logger.cpp  status.cpp  string.cpp
tests/: test_harness.h  test_main.cpp
tests/integration/: redis_cli_smoke.sh
tests/unit/: command_tests.cpp  persistence_tests.cpp  resp_parser_tests.cpp  storage_tests.cpp
